# GlyphMosaic

./: .gitignore  Cargo.nix  Cargo.toml  Justfile  Makefile  build.rs  lcov.info  readme.md  rustfmt.toml  shell.nix
.github/workflows/: build_documentation.yml  makefile.yml
Documentation/: Main Modules.plantuml
Resources/: Demo Image.xcf
Resources/Documentation/: component-connector-diagram.plantuml  context-diagram.plantuml  use-case-diagram.plantuml
Resources/Documentation/Architecture/: main.tex
documentation/: Architecture.tex
documentation/Specification/: appendix.tex  architecture.tex  common.tex  glossary.tex  glossary_terms.tex  index.tex  introduction.tex  keywords.tex  main.tex  preamble.tex  qualities.tex  references.tex  requirements.tex  stakeholders.tex  subsystems.tex  system_overview.tex  title_page.tex  ui_mockups.tex  version_history.tex  views.tex
documentation/Specification/appendix/: algorithm.tex  appendix.tex  dependencies.tex  parameters.tex  references.tex  ui_mockups.tex
documentation/Specification/architecture/: alternatives.tex  challenges_and_limitations.tex  drivers.tex  patterns.tex  rationales.tex
documentation/Specification/diagrams/: app_host.plantuml  component-connector-diagram.plantuml  component_connector_diagram.plantuml  context.plantuml  context_diagram.plantuml  (+5 more)
src/: GlyphMosaic GUI.glade  GlyphMosaic GUI.glade~  lib.rs
src/cli/: main.rs
src/gui/: controller.rs  main.rs  model.rs  util.rs  view.rs
src/lib/: backend_manager.rs  mod.rs  point.rs
test resources/: testdoc.json  testimg.json
(+101 files in other folders)
