[package]
name = "glyph_mosaic"
version = "0.1.0"
edition = "2021"

[build-dependencies]
gtk4 = { version = "0.4.8" }

[dependencies]
gtk4 = "0.4.8"
image = "0.24.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "gui"
path = "src/gui/main.rs"
