[package]
name = "glyph_mosaic"
version = "0.0.1"
edition = "2021"

[build-dependencies]

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
roopes = "0.1.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "gui"
path = "src/gui/main.rs"
